删除api防止信息泄露

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,8 +19,8 @@ model:
 
   # API云上模型配置（当 provider="api" 时使用）
   # SiliconFlow OpenAI-compatible endpoint
-  api_base: "https://api.siliconflow.cn/v1/chat/completions"
-  api_key: "sk-hwcnbmzkafcexxqedhhdrocicavcekdkojfuqumvdcfxquqg"
+  api_base: "s"
+  api_key: ""
   
   # 本地部署模型配置（当 provider="local" 时使用）
   # model_path: "/path/to/local/model"  # 本地模型路径
@@ -35,7 +35,7 @@ model:
   # timeout: 60
   
   # 通用配置
-  model_name: "deepseek-ai/DeepSeek-V3.2"  # 模型名称/ID（可选: deepseek-ai/DeepSeek-V3, deepseek-ai/DeepSeek-V3.2）
+  model_name: ""  # 模型名称/ID
   temperature: 0.1
   max_tokens: 2000
   timeout: 60
@@ -58,7 +58,7 @@ tools:
   enabled: []
   timeout: 10
   max_retries: 2
-  # 豆包策略：是否启用任务先验路由（三层判断：是否调工具/能力标签/属性标签）
+  # 策略：是否启用任务先验路由（三层判断：是否调工具/能力标签/属性标签）
   use_task_router: false
 
 # Skills（可扫描加载的工具）
