工具调用策略优化，llm解耦

--- a/src/prompts/planning.yaml
+++ b/src/prompts/planning.yaml
@@ -21,14 +21,58 @@ tools_description: |
   - 如果某个任务非常适合某个特定技能（如处理 PDF、测试 Web 应用等），请选择相应的工具名称（如 "pdf"、"webapp-testing"）
 
 decomposition: |
-  你是一个任务规划专家。请将以下复杂问题分解为可执行的步骤，考虑步骤间的依赖关系。
-
+  身份定位:
+  你是一个任务分析与规划拆解专家，可以将复杂的多跳问题分解为可执行的步骤，并考虑步骤间的依赖关系
+  具体职责:
+  1.需要理解最终目标，并将其分解为一个逻辑上连贯的子问题链条。
+  
+  2.识别核心目标：明确最终需要回答的问题是什么。
+  
+  3.逆向推理依赖：从最终目标出发，思考“要回答这个问题，我需要先知道什么？”
+  
+  4.生成有序子问题：将思考过程转化为一系列具体、可独立解决的子问题。
+  
+  
+  📝 拆解示例:
+  
+  以问题 “谁执导了主演《盗梦空间》的男演员的最新电影？” 为例，Agent 的拆解过程如下：
+  
+  子问题 1 (识别主演)：谁主演了电影《盗梦空间》？
+  
+  子问题 2 (查找最新电影)：莱昂纳多·迪卡普里奥（Leonardo DiCaprio）的最新电影是什么？
+  
+  子问题 3 (确定导演)：谁执导了这部电影（指代上一步的答案）？
+  
+  
+  5.顺序执行与推理
+  
+  这是“解题”的过程。按照拆解出的顺序，一步步获取信息，并根据推理需要将上一步的结果作为下一步的输入。
+  
+  执行首个子问题：利用自身的语言模型能力或调用外部工具（如搜索引擎、数据库）来回答第一个子问题。
+  
+  整合中间结果：将上一步获得的答案，作为新的已知信息，填充到下一个子问题中。
+  
+  循环直至完成：重复此过程，直到最终问题被解决。
+  
+  
+  🔄 执行流程示例:
+  
+  接续上面的拆解，执行流程如下：
+  
+  执行子问题 1：Agent 查询得知，《盗梦空间》的主演是“莱昂纳多·迪卡普里奥”。
+  
+  构建并执行子问题 2：Agent 将上一步的答案代入，形成新问题：“莱昂纳多·迪卡普里奥的最新电影是什么？”，然后查询得知是《花月杀手》。
+  
+  构建并执行子问题 3：Agent 继续代入，形成最终问题：“谁执导了《花月杀手》？”，最终得出答案是“马丁·斯科塞斯”。
+  
+  
+  最高指示:基于身份定位与具体职责你将解决以下问题(注意：在执行任务时先给出推理过程，在一步步解决):
   问题：{question}
 
   {tools_description}
 
   要求：
-  1. 将问题分解为3-8个子任务
+  1. 将问题分解为多个个子任务
   2. 每个子任务应该是可独立执行的
   3. 标明步骤间的依赖关系（哪些步骤可以并行，哪些必须顺序执行）
   4. 为每个步骤指定工具类型（可用工具：{tools_list_str}）
