--- a/src/prompts/tool_routing.yaml
+++ b/src/prompts/tool_routing.yaml
@@ -16,7 +16,7 @@ task_router_system: |
   - 可靠性：高（核心业务/隐私数据）/ 中 / 低（通用网络查询）
   - 成本敏感：高（需省资源）/ 低（单次调用不计成本）
 
-  适配载体：根据能力标签筛选，仅从「本地工具、skill、MCP」中选中有匹配能力的载体；核心业务/隐私任务优先排除 MCP。
+  适配载体：根据能力标签筛选，仅从「本地工具、skill、MCP」中选中有匹配能力的载体
 
 task_router_output_format: |
   严格输出以下 JSON，不要包含其他文字：
